--- a/Stryxus.Lib.AspNet/Stryxus.Lib.AspNet.csproj
+++ b/Stryxus.Lib.AspNet/Stryxus.Lib.AspNet.csproj
@@ -18,10 +18,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="5.0.1" />
   </ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\Stryxus.Lib\Stryxus.Lib.csproj" />
-  </ItemGroup>
-
   <Import Project="..\Stryxus.Lib.AspNet.Shared\Stryxus.Lib.AspNet.Shared.projitems" Label="Shared" />
+
+  <Import Project="..\StryxusLib.Shared\StryxusLib.Shared.projitems" Label="Shared" />
 
 </Project>
