--- a/Stryxus.Lib/Stryxus.Lib.csproj
+++ b/Stryxus.Lib/Stryxus.Lib.csproj
@@ -17,4 +17,6 @@
 		<PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
 	</ItemGroup>
 
+	<Import Project="..\StryxusLib.Shared\StryxusLib.Shared.projitems" Label="Shared" />
+
 </Project>
