--- a/Stryxus.Lib/Stryxus.Lib.csproj
+++ b/Stryxus.Lib/Stryxus.Lib.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>net5.0;netstandard2.0;netstandard2.1</TargetFrameworks>
+		<TargetFramework>net5.0</TargetFramework>
 		<Platforms>x64</Platforms>
 		<AssemblyName>Stryxus.Lib</AssemblyName>
 		<RootNamespace>Stryxus.Lib</RootNamespace>
